# lexov_core

./: Cargo.toml  README.md  package.json  tsconfig.json
src/: lib.rs
ts/: structures.ts
